# N3MDL-Symbolic-Networks

./: Makefile  README.md  pyproject.toml  requirements.txt
N3MDL/: model.py  train.py
N3MDL/activation/: custom.py  leakyrelu.py  relu.py  sigmoid.py  softmax.py
N3MDL/attention/: attention.py  attn_positional_encoding.py  combine_heads.py  positional_encoding.py  split_heads.py  weight.py
N3MDL/decoder/: decoder.py  decoder_attention.py  decoder_block.py  decoder_feedforward.py  positional_encoder.py
N3MDL/encoder/: encoder.py  encoder_attention.py  encoder_block.py  encoder_feedforward.py  positional_encoding.py
N3MDL/layers/: decoder_recurrent.py  encoder_recurrent.py
N3MDL/network/: identity_block.py  network.py  subnetwork.py
N3MDL/symbolic/: symbolic_reasoning_engine.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 3.0-attention.ipynb
reports/: main.aux  main.tex
